--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,14 @@
 body{
 
     background-image: url(../background.jpg);
+    background-size: 100%;
 }
 
 .header{
     height: 300px;
     width: 100%;
     display: inline-flex;
-    margin-top: 60px;
+    margin-top: 80px;
 }
 
 .header-left{
@@ -88,6 +89,7 @@ body{
 .toptitle{
     margin: auto;
     text-align: center;
+    margin-top: 30px;
 }
 
 h1{
@@ -135,6 +137,10 @@ h2{
     
 }
 
+#current{
+    width: 100%;
+    margin-top: 10px;
+}
 
 .infobox{
     width: 18vh;
@@ -190,3 +196,120 @@ h2{
     height: 50%;
     justify-content: space-evenly;
 }
+
+/*Make a separate rule for the phones*/
+
+@media all and (min-width:0px) and (max-width: 420px) {
+    .toptitle{
+        width: 100%;
+    }
+
+    .toptitle h1{
+        font-size: 4vh;
+        width: 100%;
+        box-shadow: 1px 1px gray;
+    }
+
+    .date_time{
+        width: 90%;
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: 1px 1px gray;
+        text-align: center;
+        justify-content: center;
+
+    }
+
+    .date_time h2{
+        font-size: 2.7vh;
+    }
+
+    .header{
+        display: grid;
+        width: 100%;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        height: 400px;
+        
+
+    }
+
+    .header-left{
+        margin-left: 0px;
+        height: 150px;
+        margin-right: 0px;
+        margin-top: 0px;
+        width: 10px !important;
+        box-shadow: 1px 1px gray;
+        min-width: 280px;
+        width: 100%;
+        padding-right: 0px;
+    }
+
+    #temperature{
+        width: 10px !important;
+        min-width: 70px;
+        height: 20px;
+        font-size: 2.9vh;
+        text-align: center;
+    }
+
+    #description{
+        font-size: 2.9vh;
+        text-align: center;
+    }
+
+    .header-right{
+        margin-left: 0px;
+        margin-right: 0px;
+        margin-top: 0px;
+        box-shadow: 1px 1px gray;
+        min-width: 260px;
+        width: 100%;
+        height: 200px;
+
+    }
+
+    #current{
+
+        font-size: 2.8vh;
+    }
+
+    .icontemp{
+        width: 100%;
+    
+    }
+
+    .tempbox{
+
+        margin-left: 10px;
+        margin-right: 0px;
+        margin-bottom: 20px;
+        width: 100px;
+    }
+
+    #todayicon{
+        margin-left: 2px;
+        margin-right: 3px;
+    }
+
+    .infobox{
+        width: 8.5vh;
+        border-radius: 20px;
+        
+    }
+
+    .infobox:hover{
+        transform: scale(1.5);
+    }
+
+    .infobox h2{
+        font-size: 1.3vh;
+    }
+
+    .infobox h3{
+        font-size: 1.2vh;
+    }
+
+  }
